--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=9000
 
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/timetable
+spring.r2dbc.username=timetable
+spring.r2dbc.password=timetable
+
+spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
+spring.liquibase.contexts=dev
+
+logging.level.org.springframework.data.r2dbc=DEBUG
