--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9000
 
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/timetable
+spring.r2dbc.url=r2dbc:postgresql://localhost:5433/timetable
 spring.r2dbc.username=timetable
 spring.r2dbc.password=timetable
 
@@ -8,3 +8,8 @@ spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 spring.liquibase.contexts=dev
 
 logging.level.org.springframework.data.r2dbc=DEBUG
+logging.level.root=TRACE
+
+spring.rsocket.server.port=7000
+spring.rsocket.server.transport=tcp
+spring.main.lazy-initialization=true
